[package]
description = "Created with Anchor"
edition = "2021"
name = "escrow_game"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_game"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.30.1", features = ["metadata"]}
pyth-solana-receiver-sdk = "0.3.2"
